BeansDefinition, AppProperties and code refactor

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -50,7 +50,8 @@
 		<!-- Dependency versions -->
 		<redis.clients.version>5.0.2</redis.clients.version>
 		<jsmpp.version>3.1.5</jsmpp.version>
-		<smsc-utils.version>2.0.0-4</smsc-utils.version>
+		<paic.licenser.version>2.0</paic.licenser.version>
+		<smsc-utils.version>2.0.0-9</smsc-utils.version>
 		<mockito.version>5.12.0</mockito.version>
 		<junit.jupiter.version>5.10.3</junit.jupiter.version>
 		<powermock.version>2.0.9</powermock.version>
@@ -97,6 +98,11 @@
 			<groupId>org.jsmpp</groupId>
 			<artifactId>jsmpp</artifactId>
 			<version>${jsmpp.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.paic.licenser</groupId>
+			<artifactId>PAiClicenser</artifactId>
+			<version>${paic.licenser.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.paicbd</groupId>
