--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ redis.threadPool.maxTotal=60
 redis.threadPool.maxIdle=50
 redis.threadPool.minIdle=10
 redis.threadPool.blockWhenExhausted=true
+redis.connection.timeout=2000
+redis.so.timeout=2000
+redis.maxAttempts=20
+redis.connection.user=
+redis.connection.password=
 
 # Process
 redis.preMessageList=preMessage
@@ -45,7 +50,7 @@ websocket.server.enabled=true
 websocket.server.host=localhost
 websocket.server.port=8080
 websocket.server.path=/ws
-websocket.server.retryInterval=10000
+websocket.retry.intervalSeconds=10
 websocket.header.name=Authorization
 websocket.header.value=fcb13146-ecd7-46a5-b9cb-a1e75fae9bdc
 
