--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.paicbd.smsc</groupId>
 	<artifactId>routing</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0-16</version>
 	<name>routing</name>
 	<description>Routing Module by PAiC</description>
 	<licenses>
